<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="home_page_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="use_agreement">Пользовательское соглашение</string>
    <string name="android_developer_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="mail_message">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail">volkova.yulia88@yandex.ru</string>
    <string name="use_agreement_text">https://yandex.ru/legal/practicum_offer/</string>
    <string name="something_went_wrong">Проблемы со связью.</string>
    <string name="no_int_message">Загрузка не удалась. Проверьте подключение к итнертнету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="media">Медиатека</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="no_favorites">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
</resources>