<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:layout_marginHorizontal="@dimen/settings_text_size"
            android:paddingTop="14dp"
            android:text="@string/settings"
            android:textColor="?attr/colorOnSecondary"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size" />
    </LinearLayout>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button"
        android:layout_gravity="end"
        android:layout_marginHorizontal="@dimen/settings_text_size"
        android:text="@string/dark_theme"
        app:thumbTint="@color/text_gray"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/settings_text_size"/>

    <TextView
        android:id="@+id/textViewShare"
        style="@style/SettingsTextViewList"
        android:drawableEnd="@drawable/share"
        android:text="@string/share" />

    <TextView
        android:id="@+id/textViewSupport"
        style="@style/SettingsTextViewList"
        android:drawableEnd="@drawable/support"
        android:text="@string/support" />

    <TextView
        android:id="@+id/textViewUseAgreement"
        style="@style/SettingsTextViewList"
        android:drawableEnd="@drawable/arrow_forward"
        android:text="@string/use_agreement"/>


</LinearLayout>