<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingTop="14dp"
            android:text="@string/settings"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/medium_padding"
            android:paddingTop="21dp"
            android:text="@string/dark_theme"
            android:textColor="@color/text_color"
            android:textSize="@dimen/settings_text_size"
            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:layout_gravity="end"
            />

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button"
        android:paddingHorizontal="@dimen/medium_padding"
        android:gravity="center_vertical"
        android:text="@string/share"
        android:textColor="@color/text_color"
        android:textSize="@dimen/settings_text_size"
        android:drawableEnd="@drawable/share" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button"
        android:paddingHorizontal="@dimen/medium_padding"
        android:gravity="center_vertical"
        android:text="@string/support"
        android:textColor="@color/text_color"
        android:textSize="@dimen/settings_text_size"
        android:drawableEnd="@drawable/support" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button"
        android:paddingHorizontal="@dimen/medium_padding"
        android:gravity="center_vertical"
        android:text="@string/terms_of_use"
        android:textColor="@color/text_color"
        android:textSize="@dimen/settings_text_size"
        android:drawableEnd="@drawable/arrow_forward" />



    </LinearLayout>