<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/settings_text_size"
            android:fontFamily="@font/ys_display_medium"
            android:paddingTop="14dp"
            android:text="@string/search"
            android:textColor="?attr/colorOnSecondary"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size"
            app:icon="@drawable/search" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_padding"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/selector"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/selector"
            android:drawableLeft="@drawable/search_mini"
            android:drawablePadding="8dp"
            android:drawableTint="?attr/colorPrimaryVariant"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="25"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/text_color"
            android:textColorHint="?attr/colorPrimaryVariant"
            android:textCursorDrawable="@drawable/cursor"
            android:textFontWeight="400"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="@dimen/medium_padding"
            android:layout_height="@dimen/medium_padding"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/colorSecondary"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:visibility="gone"
            app:tint="?attr/colorPrimaryVariant" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/historyView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/historyTextView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/history_text"
                android:layout_gravity="center"
                android:fontFamily="@font/ys_display_medium"
                android:paddingTop="@dimen/settings_text_size"
                android:text="@string/history"
                android:textColor="?attr/colorOnSecondary"
                android:textFontWeight="500"
                android:textSize="@dimen/placeholder_text_size"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trackView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <Button
                android:id="@+id/clearHistory"
                style="@style/ButtonUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/medium_padding"
                android:backgroundTint="?attr/colorOnSecondary"
                android:text="@string/clear_history"
                android:visibility="gone"
                app:cornerRadius="@dimen/update_radius" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_102"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/placeholderImage"
                style="@style/NoInternetImg"
                android:layout_width="@dimen/image_placeholder"
                android:layout_height="@dimen/image_placeholder"
                android:layout_gravity="center_horizontal"
                android:background="?attr/color"
               android:visibility="gone" />

            <ImageView
                android:id="@+id/nothingFindImage"
                style="@style/NothingFound"
                android:layout_width="@dimen/image_placeholder"
                android:layout_height="@dimen/image_placeholder"
                android:layout_gravity="center_horizontal"
                android:background="?attr/color"
                android:visibility="gone" />

            <TextView
                android:id="@+id/placeholderMessage"
                style="@style/NothingFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="?attr/color"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/noInternetMessage"
                style="@style/NothingFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/search_padding"
                android:background="?attr/color"
                android:text="@string/no_int_message"
                android:textAlignment="center"
                android:visibility="gone" />

            <Button
                android:id="@+id/updateButton"
                style="@style/ButtonUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/medium_padding"
                android:backgroundTint="?attr/colorOnSecondary"
                android:text="@string/update"
                android:visibility="gone"
                app:cornerRadius="@dimen/update_radius" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/clear_sky"
                android:visibility="gone" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>