<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:src="@drawable/arrow_back"
            app:tint="?attr/colorOnPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:paddingHorizontal="8dp"
            android:paddingTop="14dp"
            android:text="@string/search"
            android:textColor="?attr/colorOnSecondary"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size"
            app:icon="@drawable/search" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_padding"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/selector"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/selector"
            android:drawableLeft="@drawable/search_mini"
            android:drawablePadding="8dp"
            android:drawableTint="?attr/colorPrimaryVariant"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="25"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/text_color"
            android:textColorHint="?attr/colorPrimaryVariant"
            android:textCursorDrawable="@color/clear_sky"
            android:textFontWeight="400"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="@dimen/medium_padding"
            android:layout_height="@dimen/medium_padding"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/colorSecondary"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:visibility="gone"
            app:tint="?attr/colorPrimaryVariant" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
       >

        <ImageView
            android:id="@+id/placeholderImage"
            style="@style/NoInternetImg"
            android:layout_width="@dimen/image_placeholder"
            android:layout_height="@dimen/image_placeholder"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/nothingFindImage"
            style="@style/NothingFound"
            android:layout_width="@dimen/image_placeholder"
            android:layout_height="@dimen/image_placeholder"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/placeholderMessage"
            style="@style/NothingFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/noInternetMessage"
            style="@style/NothingFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/search_padding"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:visibility="gone"
            android:text="@string/no_int_message"/>

        <Button
            android:id="@+id/updateButton"
            android:layout_width = "wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/ButtonUpdate"
            android:layout_marginTop = "@dimen/medium_padding"
            android:text="@string/update"
            app:cornerRadius = "@dimen/update_radius"
            android:backgroundTint="?attr/colorOnSecondary"
            android:visibility="gone"
            />
    </LinearLayout>
    </FrameLayout>

</LinearLayout>